# motion-detector-cpu-fpga

./: .gitignore  README.md
cpu/: README.md
cpu/libraries/base/: CMakeLists.txt
cpu/libraries/base/include/: motion_detector.hpp
cpu/libraries/base/src/: contour_detector.cpp  contour_detector.hpp  image_utils.hpp  image_utils.ipp  motion_detector.cpp
cpu/libraries/base/test/: test_contour_detector.cpp  test_image_utils.cpp  test_motion_detector.cpp
cpu/libraries/fast/: CMakeLists.txt
cpu/libraries/fast/include/: motion_detector.hpp
cpu/libraries/fast/src/: contour_detector.cpp  contour_detector.hpp  image_utils.cpp  image_utils.hpp  motion_detector.cpp
cpu/libraries/fast/test/: test_contour_detector.cpp  test_image_utils.cpp  test_image_utils.hpp
cpu/main/: CMakeLists.txt  main.cpp
cpu/motion_detector/doc/: Doxyfile
cpu/motion_detector/include/: motion_detector.hpp
cpu/motion_detector/src/: contour_detector.cpp  contour_detector.hpp  image_utils.hpp  image_utils.ipp  motion_detector.cpp
cpu/motion_detector/test/: test_contour_detector.cpp  test_motion_detector.cpp  test_motion_detector.hpp  test_utils.hpp
cpu/pilot_programs/save_to_disk/: main.cpp
cpu/pilot_programs/show_on_screen/: CMakeLists.txt  main.cpp
hls/: README.md
hls/0_adapting_to_hls/0_no_system_calls_and_unused_code/: CMakeLists.txt
hls/0_adapting_to_hls/0_no_system_calls_and_unused_code/driver/: main.cpp
hls/0_adapting_to_hls/0_no_system_calls_and_unused_code/src/: contour_detector.cpp  image_utils.hpp  image_utils.ipp
hls/0_adapting_to_hls/0_no_system_calls_and_unused_code/test/: test_image_utils.cpp  test_image_utils.hpp  test_main.cpp  test_motion_detector.cpp  test_motion_detector.hpp  test_utils.hpp
hls/0_adapting_to_hls/0_removing_unused_code/: CMakeLists.txt
hls/0_adapting_to_hls/0_removing_unused_code/include/: motion_detector.hpp
hls/0_adapting_to_hls/0_removing_unused_code/src/: image_utils.hpp  image_utils.ipp  motion_detector.cpp
hls/0_adapting_to_hls/0_removing_unused_code/test/: test_image_utils.cpp  test_image_utils.hpp
hls/0_adapting_to_hls/1_fix_incompatibilities/driver/: main.cpp
hls/0_adapting_to_hls/1_fix_incompatibilities/src/: contour_detector.cpp  motion_detector.cpp
hls/0_adapting_to_hls/1_fix_incompatibilities/test/: test_contour_detector.cpp
hls/0_adapting_to_hls/2_synthetising/: motdet_hls.tcl
hls/0_adapting_to_hls/2_synthetising/src/: contour_detector.cpp  image_utils.hpp  motion_detector.hpp
hls/1_hls_optimization/0_streaming_images/: motdet_hls.tcl
hls/1_hls_optimization/0_streaming_images/src/: image_utils.cpp  image_utils.hpp  motion_detector.hpp
hls/1_hls_optimization/0_streaming_images/testbench/: main.cpp
hls/1_hls_optimization/1_performance/: motdet_hls.tcl
hls/1_hls_optimization/1_performance/src/: contour_detector.cpp  motion_detector.cpp  motion_detector.hpp
hls/1_hls_optimization/1_performance/testbench/: main.cpp
hls/1_hls_optimization/2_fine_tuning/: motdet_hls.tcl
hls/1_hls_optimization/2_fine_tuning/src/: image_utils.cpp  image_utils.hpp
hls/1_hls_optimization/2_rtl_simulation/: contour_detector.hpp  image_utils.cpp  image_utils.hpp  main.cpp  motdet_hls.tcl
hls/1_hls_optimization/3_fine_tuning/: motdet_hls.tcl
hls/final/: contour_detector.cpp  contour_detector.hpp  image_utils.cpp  image_utils.hpp  main.cpp  motdet_hls.tcl  motion_detector.cpp  motion_detector.hpp
hls/steps_followed/0_no_system_calls_and_unused_code/include/: motion_detector.hpp
hls/steps_followed/0_no_system_calls_and_unused_code/src/: contour_detector.cpp  contour_detector.hpp
hls/steps_followed/0_no_system_calls_and_unused_code/test/: test_contour_detector.cpp  test_contour_detector.hpp
hls/steps_followed/1_fix_incompatibilities/: CMakeLists.txt  motion_detector.pc.in
hls/steps_followed/1_fix_incompatibilities/include/: motion_detector.hpp
hls/steps_followed/1_fix_incompatibilities/src/: contour_detector.hpp  image_utils.cpp  image_utils.hpp  motion_detector.cpp
hls/steps_followed/2_synthetising/: motdet_hls.tcl
hls/steps_followed/2_synthetising/src/: contour_detector.hpp  image_utils.cpp  motion_detector.cpp
hls/steps_followed/2_synthetising/testbench/: main.cpp
hls/steps_followed/3_streaming_images/: motdet_hls.tcl
hls/steps_followed/3_streaming_images/src/: contour_detector.cpp  contour_detector.hpp  image_utils.cpp  motion_detector.cpp
hls/steps_followed/3_streaming_images/testbench/: main.cpp
hls/steps_followed/4_performance/: motdet_hls.tcl
hls/steps_followed/5_rtl_simulation/: contour_detector.cpp  motdet_hls.tcl  motion_detector.cpp  motion_detector.hpp
